# safeguard

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/safeguard/: exceptions.py  maybe.py  result.py
src/safeguard/helper/: base_container.py  immutable.py
tests/: test_maybe.py  test_pattern_matching.py  test_result.py  test_result_do.py
tests/type_checking/: test_maybe.yml  test_result.yml
